@@ -28,6 +28,8 @@ ubiquity (2.13.12) UNRELEASED; urgency=low
   * Make panel.c aware of screen & display changes, prevents visual
     artefacts on nexus7 when screen is changing or external monitor is
     plugged in and resolution is changes.
+  * Update disable/enable ctrl+alt+t terminal to use gsettings keys,
+    instead of gconf.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 18 Feb 2013 16:22:13 +0000
 
